// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the feedback submit question as a slider 1`] = `
<ContextProvider
  value={
    Object {
      "state": Object {},
    }
  }
>
  <FeedbackSubmitQuestion
    answer={
      Object {
        "answer": "Neither Agree nor Disagree",
        "id": "a",
        "questionId": "1",
        "requestId": "abc",
      }
    }
    onAnswerChange={[MockFunction]}
    question={
      Object {
        "id": "1",
        "question": "Do you think the project is going well so far?",
        "questionNumber": 1,
        "questionType": "SLIDER",
      }
    }
    readOnly={false}
    requestId="abc"
  />
</ContextProvider>
`;

exports[`renders the feedback submit question as radio buttons 1`] = `
<ContextProvider
  value={
    Object {
      "state": Object {},
    }
  }
>
  <FeedbackSubmitQuestion
    answer={
      Object {
        "answer": "Yes",
        "id": "a",
        "questionId": "1",
        "requestId": "abc",
      }
    }
    onAnswerChange={[MockFunction]}
    question={
      Object {
        "id": "1",
        "question": "Do you think the project is going well so far?",
        "questionNumber": 1,
        "questionType": "RADIO",
      }
    }
    readOnly={false}
    requestId="abc"
  />
</ContextProvider>
`;

exports[`renders the feedback submit question as text 1`] = `
<ContextProvider
  value={
    Object {
      "state": Object {},
    }
  }
>
  <FeedbackSubmitQuestion
    answer={
      Object {
        "answer": "Good",
        "id": "a",
        "questionId": "1",
        "requestId": "abc",
      }
    }
    onAnswerChange={[MockFunction]}
    question={
      Object {
        "id": "1",
        "question": "How is the project going so far?",
        "questionNumber": 1,
        "questionType": "TEXT",
      }
    }
    readOnly={false}
    requestId="abc"
  />
</ContextProvider>
`;
